--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ xgboost = "^1.7.4"
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.11.0"
 pytest = "^7.2.2"
+matplotlib = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
