--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "ocean_forest", from = "src"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 numpy = "^1.24"
-pandas = "^1.5"
+pandas = ">=1.5, <3"
 scikit-learn = "^1.2"
 scipy = "^1.10"
 linear-tree = "^0.3"
