--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "ocean_forest", from = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-numpy = "^1.24"
+numpy = ">1.24 <3"
 pandas = ">=1.5, <3"
 scikit-learn = "^1.2"
 scipy = "^1.10"
