--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,12 @@ linear-tree = "^0.3"
 joblib = "^1.2"
 dynaconf = "^3.1"
 tables = "^3.8"
-xgboost = "^1.7"
+xgboost = ">=1.7, <3"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.11.0"
 pytest = "^7.2.2"
-matplotlib = "^3.7.1"
+matplotlib = ">=3.5, <4"
 
 [build-system]
 requires = ["poetry-core"]
